alignment-fixed

--- a/src/Components/Question/Question.css
+++ b/src/Components/Question/Question.css
@@ -3,6 +3,6 @@ div .answer {
 	text-align: left;
 	padding-left: 15px;
 }
-div {
+div .question-container {
 	margin-bottom: 48px;
 }
